<resources>
    <string name="app_name">VetyCare</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="entrar">Entrar</string>
    <string name="volver">Volver</string>
    <string name="enviar">Enviar</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cont_main_nombre_mascota">Nombre_mascota</string>
    <string name="cont_main_Nombre_usuario">Nombre_usuario</string>
    <string name="inicio_titulo">INICIO</string>
    <string name="inicio_correo">Correo</string>
    <string name="inicio_contraseña">Contraseña</string>
    <string name="inicio_recordar">Recordar usuario</string>
    <string name="inicio_cuenta">"¿Aún no tienes cuenta con nosotros?"</string>
    <string name="inicio_registrate">"Regístrate"</string>
    <string name="inicio_olvido">"He olvidado mi contraseña"</string>
    <string name="usuario_inicio">"BIENVENIDO"</string>
    <string name="usuario_inicio_eslogan">"Donde cada latido cuenta"</string>
    <string name="rc_pass_titulo">RECUPERAR CONTRASEÑA</string>
    <string name="rc_pass_correo">Introduzca el correo:</string>
    <string name="rc_pass_correoEjem">ejemplo@correo.com</string>
    <string name="rc_pass_info">Te enviaremos un correo con las instrucciones para restablecer tu contraseña.</string>
    <string name="reg_usuario_titulo">"REGISTRO DE USUARIO"</string>
    <string name="reg_nombre">"Nombre*:"</string>
    <string name="reg_apellido">"Apellidos*:"</string>
    <string name="reg_dni">"NIE/NIF*:"</string>
    <string name="reg_fecha">"Fecha de nacimiento*:"</string>
    <string name="reg_correo">"Correo*:"</string>
    <string name="reg_telefono">"Teléfono:"</string>
    <string name="reg_contraseña">"Contraseña*:"</string>
    <string-array name="opciones_sexo_usuario">
        <item>Sin definir</item>
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>
    <string name="reg_animal_titulo">"REGISTRO DE MASCOTA"</string>
    <string name="reg_sexo">"Sexo:"</string>
    <string name="reg_castracion">"Castración/Esterilización:"</string>
    <string name="reg_fecha_animal">"Fecha de nacimiento:"</string>
    <string name="reg_microchip">"Microchip:"</string>
    <string name="reg_especie">"Especie:"</string>
    <string name="reg_raza">"Raza:"</string>
    <string name="reg_peso">"Peso:"</string>
    <string-array name="opciones_sexo_animal">
        <item>Sin definir</item>
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>
    <string-array name="opciones_castracion">
        <item>Sin definir</item>
        <item>Si</item>
        <item>No</item>
    </string-array>
    <string name="usuario_mascota">MIS MASCOTAS</string>
    <string name="item_mascota">"Añadir nueva mascota"</string>
    <string name="usuario_calendario_titulo">CALENDARIO</string>
    <string name="usuario_calendario_mes">MES</string>
    <string name="usuario_calendario_Vacunación">Vacunación</string>
    <string name="usuario_calendario_Revisión">Revisión</string>
    <string name="usuario_calendario_Consulta">Consulta general</string>
    <string name="usuario_calendario_Pruebas">Pruebas</string>
    <string name="usuario_calendario_medicamentos">Comprar más medicamentos</string>
    <string name="usuario_calendario_leyenda">LEYENDA</string>
    <string name="usuario_calendario_dtllCita">DETALLE DE LA CITA</string>
    <string name="usuario_cldr_cita_mascota">Mascota</string>
    <string name="usuario_cldr_cita_comunidad">Comunidad Autonoma:</string>
    <string name="usuario_cldr_cita_clinica">Clínica:</string>
    <string-array name="opciones_clinicas">
        <item>Seleccione una clínica:</item>
        
        <item>Clínica Veterinaria Santa Justa</item>
        <item>Clínica Veterinaria Canymar</item>
        <item>Clínica Veterinaria Viana | MiVet</item>
        <item>Clínica Veterinaria Uno Más</item>
        <item>Clínica Veterinaria Los Lobos</item>
        
        <item>Clínica Veterinaria Zoo</item>
        <item>Clínica Veterinaria Delicias</item>
        <item>Clínica Veterinaria Zaracán</item>
        <item>Clinica Veterinaria MyVet</item>
        <item>Centro Clínico Veterinario Teruel</item>
        
        <item>Clínica Veterinaria Covadonga</item>
        <item>Clínica Veterinaria Corvera</item>
        <item>Clínica Veterinaria Asturcón</item>
        <item>Clínica Veterinaria Llanesvet</item>
        <item>Clínica Veterinaria Principado</item>
        
        <item>Clínica Veterinària La Savina</item>
        <item>Clínica Veterinaria Eivivet</item>
        <item>Clínica Veterinaria El Parc</item>
        <item>Clínica Veterinaria Son Moix</item>
        <item>Clínica Veterinaria Pérez Sintes</item>
        
        <item>Clínica Veterinaria Arrecife</item>
        <item>Clínica Veterinaria Kalua</item>
        <item>Clínica Veterinaria Monzón</item>
        <item>Clínica Veterinaria Guaza</item>
        <item>Clínica Veterinaria La Gallega</item>
        
        <item>Clínica Veterinaria Liébana</item>
        <item>Clínica Veterinaria Canvet</item>
        <item>Clínica Veterinaria Ursaria</item>
        <item>Clínica Veterinaria Anjana</item>
        <item>Clínica Veterinaria Besaya</item>
        
        <item>Clínica veterinaria KINKAJÚ</item>
        <item>Clínica Veterinaria Zarpa</item>
        <item>Clínica Veterinaria Anibal</item>
        <item>Clínica Veterinaria Rogocan</item>
        <item>Clínica Veterinaria Ventura</item>
        
        <item>Clínica Veterinaria Minuvet</item>
        <item>Clínica Veterinaria Gamonal</item>
        <item>Centro Veterinario Neptuno</item>
        <item>Clínica Veterinaria Salinero</item>
        <item>Clínica veterinaria Nimae</item>
        
        <item>Hospital Veterinari Canis</item>
        <item>Clínica Veterinaria V3 Lleida</item>
        <item>Centro Veterinario Patino</item>
        <item>Clínica Veterinària Poble Nou</item>
        <item>Clínica Veterinaria Vidavet Londres</item>
        
        <item>Clínica Veterinaria Sant Antoni</item>
        <item>Clínica Veterinaria Ruzafa</item>
        <item>Clinica Veterinaria Año</item>
        <item>Clínica Veterinaria San Blas</item>
        <item>Clínica Veterinaria Albufereta</item>
        
        <item>Clínica Veterinaria Montesol</item>
        <item>Clínica Veterinaria San Jorge</item>
        <item>Clínica Veterinaria Selva</item>
        <item>Clínica Veterinaria Faunia</item>
        <item>Clínica Veterinaria Marabé</item>
        
        <item>Clínica Veterinaria Tecsagés</item>
        <item>Clínica Veterinaria Loureiro Crespo</item>
        <item>Clínica Veterinaria San Froilan</item>
        <item>Clínica veterinaria Eras</item>
        <item>Clínica veterinaria Gaia</item>
        
        <item>Clinica Veterinaria Duques de Nájera</item>
        <item>Clínica Veterinaria Cameros</item>
        <item>Clínica Veterinaria HARO</item>
        <item>Clínica veterinaria Aguirre</item>
        <item>Clínica Veterinaria Alegría</item>
        
        <item>Clínica Veterinaria Del Val</item>
        <item>Clinica Veterinaria Norivet</item>
        <item>Clínica Veterinaria Europa</item>
        <item>Clínica Veterinaria Conde Duque</item>
        <item>Centro Clínico Veterinario Ciudad de Los Ángeles</item>
        
        <item>Clínica Veterinaria El Jardín</item>
        <item>Clínica Veterinaria Murcia Norte</item>
        <item>Clínica Veterinaria Amigos</item>
        <item>Clínica Veterinaria Santiago el Mayor</item>
        <item>Clínica Veterinaria Salitre</item>
        
        <item>Clínica Veterinaria de San Adrián</item>
        <item>Clínica veterinaria Burlada</item>
        <item>Clínica veterinaria Bettervet del Sadar</item>
        <item>Clínica Veterinaria Aoiz</item>
        <item>Centro Clínico Veterinario Ansoáin</item>
        
        <item>Clínica Veterinaria Zumaquera</item>
        <item>HOSPITAL VETERINARIO DONOSTIA</item>
        <item>Clínica Veterinaria Otxoki</item>
        <item>Clínica Veterinaria Nuevo Ensanche</item>
        <item>Clínica Veterinaria MIRIBILLA</item>
    </string-array>
    <string name="usuario_cldr_cita_tipo">Tipo:</string>
    <string-array name="usuario_cldr_cita_tipo_4">
        <item>Seleccione un tipo de cita:</item>
        <item>Vacunación</item>
        <item>Revisión</item>
        <item>Consulta general</item>
        <item>Pruebas</item>
        <item>Comprar más medicamentos</item>
    </string-array>
    <string name="usuario_cldr_cita_motivo">Motivo:</string>
    <string name="usuario_cldr_cita_veterinario">Veterinario:</string>
    <string name="usuario_cldr_cita_fecha">Fecha de la cita:</string>
    <string name="usuario_cldr_cita_hora">Hora de la cita:</string>
    <string name="usuario_cldr_cita_recordatorio">Recordatorio:</string>
    <string name="usuario_cldr_cita_cancelar_cita">Cancelar cita</string>
    <string-array name="veterinarios_opciones">
        <item>Carlos Ruiz</item>
    </string-array>
    <string-array name="horas_opciones">
        <item>Seleccione una hora:</item>
        <item>08:00</item>
        <item>08:15</item>
        <item>08:30</item>
        <item>08:45</item>
        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
    </string-array>
    <string-array name="recordatorio_opciones">
        <item>Sin recordatorio</item>
        <item>1 día antes</item>
        <item>2 días antes</item>
        <item>1 semana antes</item>
        <item>1 mes antes</item>
    </string-array>
    <string name="usuario_perfil_perfil">PERFIL USUARIO</string>
    <string name="usuario_perfil_cerrar">Cerrar sesion</string>
    <string name="clinica_titulo">CLÍNICAS</string>
    <string name="clinica_ver_listado">Ver listado</string>
    <string name="clinica_ver_mapa">Ver mapa</string>
    <string name="clinica_descripcion">Encuentra nuestras clínicas veterinarias cerca de ti</string>
    <string name="clinica_zona">Comunidad autónoma:</string>
    <string name="clinica_item_direccion">Dirección:</string>
    <string name="clinica_item_telefono">Teléfono:</string>
    <string name="clinica_item_horario">Horario:</string>
    <string name="tratamiento_btn_detalles">Detalles</string>
    <string name="informe_id">ID_INFORME</string>
    <string name="informe_label_concepto">Concepto:</string>
    <string name="informe_label_fecha">Fecha:</string>
</resources>