<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <!-- Título -->
        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/inicio_titulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextTitulo"/>

        <!-- Campo Correo -->
        <EditText
            android:id="@+id/et_correo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/inicio_correo"
            android:gravity="center"
            android:background="@drawable/background_cuadro_texto"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
            style="@style/TextBase"/>

        <!-- Campo Contraseña -->
        <EditText
            android:id="@+id/et_contrasenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/inicio_contraseña"
            android:gravity="center"
            android:background="@drawable/background_cuadro_texto"
            android:padding="12dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_correo"
            style="@style/TextBase"/>

        <!-- Checkbox Recordar usuario -->
        <CheckBox
            android:id="@+id/cb_recordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/inicio_recordar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_contrasenha"
            style="@style/TextInformativo"/>

        <!-- Botón Entrar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_entrar"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/entrar"
            android:background="@drawable/botones"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_recordar"
            style="@style/TextSubtitulo"/>

        <!-- Texto ¿Aún no tienes cuenta? -->
        <TextView
            android:id="@+id/tv_registrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/inicio_cuenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_entrar"
            style="@style/TextInformativo"/>

        <!-- Link Regístrate -->
        <TextView
            android:id="@+id/tv_link_registrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/inicio_registrate"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registrate"
            style="@style/TextInformativo"/>

        <!-- Link Olvidé contraseña -->
        <TextView
            android:id="@+id/tv_olvide_contrasenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/inicio_olvido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_link_registrate"
            style="@style/TextInformativo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>