<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <!-- Título -->
        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/usuario_inicio"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextTitulo"/>
        <!-- nombre_usuario -->
        <TextView
            android:id="@+id/tv_nombre_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cont_main_Nombre_usuario"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextInformativo"/>
        <!-- NombreApp -->
        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/app_name"
            android:textColor="#9E9E9E"
            app:layout_constraintTop_toBottomOf="@id/tv_nombre_usuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/AppName"/>
        <!-- Imagen -->
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="99dp"
            android:layout_height="96dp"
            android:layout_marginTop="20dp"
            android:contentDescription="Logo"
            android:src="@drawable/icn_negro"
            app:layout_constraintTop_toBottomOf="@id/txtAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <!-- Eslogan -->
        <TextView
            android:id="@+id/tv_eslogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/usuario_inicio_eslogan"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextInformativo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
