<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_usuario">

    <!-- TÍTULO -->
    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/clinica_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextTitulo" />

    <!-- DESCRIPCIÓN -->
    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/clinica_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        style="@style/TextInformativo" />

    <!-- BOTONES VER LISTADO / VER MAPA -->
    <LinearLayout
        android:id="@+id/ll_toggle_vista"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_cuadro_texto"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_descripcion">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ver_listado"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:background="@drawable/botones"
            android:text="@string/clinica_ver_listado"
            app:backgroundTint="@null"
            style="@style/TextBotones"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ver_mapa"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:background="@drawable/boton_volver_cancelar"
            android:text="@string/clinica_ver_mapa"
            app:backgroundTint="@null"
            style="@style/TextBotones"/>
    </LinearLayout>

    <!-- MAPA -->
    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/ll_toggle_vista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>