<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="6dp"
    android:background="@drawable/background_cuadro_formulario"
    android:padding="12dp">
    <!-- TÍTULO -->
    <TextView
        android:id="@+id/tv_titulo"
        android:text="@string/informe_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextSubtitulo"/>

    <!-- CONCEPTO -->
    <TextView
        android:id="@+id/tv_label_concepto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:text="@string/informe_label_concepto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        style="@style/TextBaseNegrita"/>

    <TextView
        android:id="@+id/tv_concepto"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:background="@drawable/background_cuadro_texto"
        app:layout_constraintTop_toBottomOf="@id/tv_label_concepto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextBase" />

    <!-- FECHA -->
    <TextView
        android:id="@+id/tv_label_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:text="@string/informe_label_fecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_concepto"
        style="@style/TextBaseNegrita"/>

    <TextView
        android:id="@+id/tv_frecuencia"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:background="@drawable/background_cuadro_texto"
        app:layout_constraintTop_toBottomOf="@id/tv_label_fecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextBase" />

    <!-- BOTÓN -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ver_mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botones"
        android:layout_marginTop="4dp"
        android:text="@string/tratamiento_btn_detalles"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextBotones"/>

</androidx.constraintlayout.widget.ConstraintLayout>