<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_usuario">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="80dp">

        <!-- TÍTULO -->
        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/clinica_titulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextTitulo" />

        <!-- TEXTO DESCRIPTIVO -->
        <TextView
            android:id="@+id/tv_descripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/clinica_descripcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titulo"
            style="@style/TextInformativo" />

        <!-- SPINNER - COMUNIDAD AUTÓNOMA -->
        <TextView
            android:id="@+id/tv_label_zona"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/clinica_zona"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_descripcion"
            style="@style/TextBaseNegrita" />
        <Spinner
            android:id="@+id/sp_zona"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/background_cuadro_texto"
            android:entries="@array/opciones_comunidades"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_zona"
            style="@style/TextBase" />

        <!-- LISTA DE CLÍNICAS (RecyclerView) -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_clinicas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sp_zona" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>